--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,26 @@
-name: Generate Datas
+name: Generate Snake Animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule:
+    - cron: "0 0 * * *" # Executa diariamente
   workflow_dispatch:
 
 jobs:
-  build:
-    name: Jobs to update datas
+  generate:
     runs-on: ubuntu-latest
+
     steps:
-      # Snake Animation
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: Clonar o repositório
+        uses: actions/checkout@v3
+
+      - name: Gerar o gráfico de contribuição
+        uses: Platane/snk@v2
         with:
           github_user_name: 23Edu4rd0
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: dist/snake.svg
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - name: Enviar o gráfico gerado para o repositório
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
